tests/baselines/reference/classAbstractMethodWithImplementation.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMethodWithImplementation.ts(2,5): error TS1240: Abstract member functions cannot have an implementation.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMethodWithImplementation.ts (1 errors) ====
    abstract class A {
        abstract foo() {}
        ~~~~~~~~~~~~~~~~~
!!! error TS1240: Abstract member functions cannot have an implementation.
    }